2006-09-19    <risc@volumehost.com>

	* FeatureExtraction/gabor.c
	remove int32_t t_x, replace with uint32_t k. uint32_t is slightly faster, and simplifies the inner loops.

2006-09-15    <risc@volumehost.com>

	* FeatureExtraction/gabor.c
	dont use calloc for conv, instead declare, and clear with memset.
	change to C99 datatypes in gabor_filter().

2006-09-14    <David.Squire@infotech.monash.edu.au>
    * scripts/perl/gift-add-collection.pl
	Fixed a buglet in the last part of the help message, and added a
	'--hostname' option to make it easier to get the URLs right (no need
	to specify two prefixes if all you want is to avoid 'localhost').

2006-08-28    <risc@volumehost.com>

	* FeatureExtraction/extract_block_features.c
	handle gabor_ranges() better, fix gabor_ranges to 100000 instead of 10000
	* FeatureExtraction/write_feature_descs.c
	update initialization function call, provide variables to be 'initialized'.

2006-08-02    <risc@volumehost.com>
	* FeatureExtraction/extract_block_features.c
	define the kernals here, pass to gabor.c for init, use

	* FeatureExtraction/gabor.c
	turn kernels[11,12,21,22] into one variable. remove from global scope.


2006-07-20    <wolfgang.mueller@wiai.uni-bamberg.de>

	* libSquirePPM/ppm.h:
	Patches from Julia Longtin (risc@volumehost.com):
	../julia/00-libSquirePPM_ppm.h_add_value_plane_double_reversed.patch
	../julia/10-libSquirePPM_ppm.h_add_memory_errormessage.patch

	* FeatureExtraction/rgb2hsv_utils.c:
	Patches from Julia Longtin (risc@volumehost.com):
	../julia/40-FeatureExtraction_gabor.c_change_kernel_init_call.patch
	../julia/30-FeatureExtraction_gabor.c_use_value_plane_double_reversed.patch
	
	* FeatureExtraction/rgb2hsv_utils.c:
	Patches from Julia Longtin (risc@volumehost.com):
	../julia/30-FeatureExtraction_rgb2hsv_utils.c-create_value_plane_double_reversed.patch

	* FeatureExtraction/extract_features.c:
	Patches from Julia Longtin (risc@volumehost.com):
